# consensusclustering

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  report.xml
.github/workflows/: build.yaml  release.yaml
consensusclustering/: __init__.py  consensus.py
examples/: ConsensusClustering.ipynb
tests/: report.xml  test_consensus.py
