[tool.poetry]
name = "consensusclustering"
version = "0.2.1"
description = "Python implementation of Consensus Clustering by Monti et al. (2003)"
authors = ["Ross Burton <burtonrossj@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "^1.20.0"
pandas = "<2.0.0,>=1.5.3,"
matplotlib = "^3.8.0"
seaborn = "^0.12.2"
tqdm = "^4.66.1"
kneed = "^0.8.5"

[tool.poetry.group.dev.dependencies]
black = "*"
coverage = {version = "*", extras = ["toml"]}
flake8 = "*"
flake8-black = "*"
flake8-bugbear = "*"
flake8-docstrings = "*"
flake8-isort = "*"
flake8-unused-arguments = "*"
isort = "*"
pep8-naming = "*"
pytest = "*"
pytest-cov = "*"
pytest-mock = "*"
pre-commit = "*"
mypy = "*"
scikit-learn = "^1.3.1"
jupyterlab = "^4.0.6"
ipywidgets = "^8.1.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

##### isort configuration https://pycqa.github.io/isort/docs/configuration/config_files.html
[tool.isort]
profile = "black"
default_section = "THIRDPARTY"
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
skip = "__init__.py"


##### pytest configuration: http://doc.pytest.org/en/latest/customize.html
[tool.pytest.ini_options]
minversion = "6.0"
python_files = [ "test_*.py" ]
norecursedirs = [
  ".git",
  ".pytest_cache",
  ".aws-sam"
]
filterwarnings = [
  "ignore::UserWarning",
  "ignore::DeprecationWarning",
  "ignore::PendingDeprecationWarning"
]
addopts    = """
  --color=yes
  -p no:cacheprovider
  --verbose
  --junitxml=report.xml
  --cov-report term-missing:skip-covered
  --cov-report xml
  --cov src
"""

##### coverage configuration: https://coverage.readthedocs.io/en/latest/config.html
[tool.coverage]
[tool.coverage.paths]
source = ["cytotransform"]

[tool.coverage.run]
branch = true
source = ["cytotransform"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 50
